gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail22780.d
version https://git-lfs.github.com/spec/v1
oid sha256:60f4c6415742020bf6b6504a86fe8af415a4a2e34793c9ac70e077b3cdb948ec
size 254
